Correct a overflow bug

--- a/ETMApp/static/ETMApp/css/base.css
+++ b/ETMApp/static/ETMApp/css/base.css
@@ -2,7 +2,7 @@ body, html{
     height: 100%;
     width: 100%;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #logo{
